--- a/style/style.css
+++ b/style/style.css
@@ -1,56 +1,97 @@
-.bgIdx{
-	/*background-color:blue;*/
-	background: url("../img/bgImg.jpg");
-	color:white;
-	background-size:cover;
-	margin: 0;
-	padding: 0;
-	height: 100vh;
-	width: 100%;
+.navibar li {
+    margin-right: 0.5em;
+    margin-top: 1em;
+    background-color: #cccccc;
+    padding: 10px;
+    text-decoration: none;
+}
+.navibar li:hover{
+    background-color: #737373;
+    color: white;
+    text-decoration: none;
+}
+.navibar a:hover{
+    text-decoration: none;
+    color: white;
+}
+body{
+    background: url("../img/bgImg.jpg");
+}
+.developtext p{
+    color: white;
+    bottom: 0;
+    position: absolute;
+}
+.jarak{
+    padding-left: 1em;
+    margin-left: 1em;
+}
+.midtext{
+    display: table-row;
+    width: 100%;
+    height: 100vh;
+}
+.midtext h1,h4,h6{
+    color: white;
+}
+.ideenvironment{
+    display: table-cell;
+    vertical-align: middle;
+}
+.log{
+    background-color: #cccccc;
+    padding: 8px;
+    width: 70px;
+    outline: none;
+    border: none;
+}
+.log:hover{
+    background-color: #737373;
+    color: white;
+    outline: none;
+    border: none;
+}
+.inputuser[type=text]{
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: none;
+    border-bottom: 1px solid black;
+    
+}
+.inputpass[type=text]{
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: none;
+    border-bottom: 1px solid black;
+}
+.btnlog{
+    color: white;
+    background-color: black;
+    padding: 8px;
+    width: 100px;
+    outline: none;
+    border: none;
+}
+.btnlog:hover{
+    color: black;
+    background-color: grey;
+    padding: 8px;
+    width: 100px;
+    outline: none;
+    border: none;
+}
+.btnlog:hover a{
+    color: black;
+    background-color: grey;
+    padding: 8px;
+    width: 100px;
+    outline: none;
+    border: none;
+    text-decoration: none;
 }
 
-.btnIdx{
-	float: right;
-	padding: 10px;
-}
 
-a{
-	text-decoration: none;
-}
-
-.tlsIdx{
-	position: absolute;
-	top: 200px;
-	left: 50px;
-}
-
-.bwhIdx{
-	position: absolute;
-	top: 610px;
-	left: 50px;
-}
-
-.lgin{
-	float: left;
-	margin: 5px;
-	padding: 10px;
-	width: 300px;
-	height: 300px;
-	border: 5px solid black;
-}
-
-.lgin input{
-	padding: 5px;
-}
-
-.w3-button{
-	text-decoration: none;
-	border: 2px solid black;
-	background: white;
-	color: black;
-	padding: 6px;
-}
-
-h3{
-	color: black;
-}
